--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "my first socket.io app",
   "main": "index.js",
   "scripts": {
-    "start": "node ./index.js"
+    "start": "node ./index"
   },
   "author": "Tony",
   "license": "ISC",
